# cpp_code

./: .gitignore  CMakeLists.txt  CPP_NOTE.md  DIP.h  INTERPOLATION_NOTE.md  MATHEMATICS_NOTE.md  README.md  basic_math.cpp  basic_math.h  basic_matrix.h  common.h  coordinate_conversion.cpp  coordinate_conversion.h  date_time.cpp  date_time.h  eigen_note.cpp  file_io.cpp  file_io.h  geodesy.h  linear_regression.cpp  linear_regression.h  main.cpp  my_cpp.cpp  my_cpp.h  my_date_time.cpp  my_date_time.h  my_main.cpp  my_mathmatics.cpp  my_mathmatics.h  numerical_analysis.cpp  numerical_analysis.h  openmp_note.md  search_algorithm.h  solar_position.cpp  solar_position.h  sort_algorithm.h  successive_correction.cpp  successive_correction.h  swig_note.md  time_conversion.cpp  (+2 more)
CV/: CV_NOTE.md  DIP.cpp  DIP.h  OpenCV_NOTE.md  README.md  affine_transformation_note.cpp  affine_transformation_note.h  main_cv.cpp  opencv_tutorial.cpp  opencv_tutorial.h  operations_with_images.cpp  operations_with_images.h  poisson image editing.md  template_matching.cpp  template_matching.h  template_matching_note.cpp  template_matching_note.h
Course/: CPP_NOTE.md  GCC_NOTE.md
DIP/: DIP.h
DSA/: CMakeLists.txt  README.md  hash_table.cpp  hash_table.h  heapsort.cpp  heapsort.h  linked_list.cpp  linked_list.h  maximum_subarray.h  priority_queue.cpp  priority_queue.h  queue.cpp  queue.h  search.cpp  search.h  sort.h  stack.cpp  stack.h  tree.cpp  tree.h
Geo/: README.md  SPA.cpp  SPA.h  cgms_proj.cpp  cgms_proj.h  coordinate_reference.cpp  coordinate_reference.h  geo_common.cpp  geo_common.h  geodesy.h  normalized_geostationary_projection.cpp  normalized_geostationary_projection.h  solar_position.cpp  solar_position.h  time_conversion.cpp
ML/: CMakeLists.txt  linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  ml_common.h
NOAA_AVHRR/: NOAA_AVHRR_CPP.py  README.md  _NOAA_AVHRR_CPP.cp38-win_amd64.pyd  noaa_avhrr.cpp  noaa_avhrr.h  swig_interface_noaa_avhrr.i  swig_interface_noaa_avhrr_wrap.cxx  swig_setup_noaa_avhrr.py
SCM/: README.md  _SCM.pyd  successive_correction.cpp  successive_correction.h  swig_interface.i  swig_setup.py
SCM/py/: SCM.py  _SCM.pyd
SPA/: README.md  SPA.cpp  SPA.h  SPA.py  _SPA.cp38-win_amd64.pyd  swig_interface_spa.i  swig_interface_spa_wrap.cxx  swig_setup_spa.py
fusion/: README.md  README_SWIG.md  fusion.cpp  fusion.h  swig_interface_fusion.i  swig_setup_fusion.py
fusion/py/: Fusion.py  _Fusion.pyd
geodesy/: README.md  coordinate_reference.cpp  coordinate_reference.h  geodesy.h  solar_position.cpp  solar_position.h
interpolate/: IDW.cpp  IDW.h  swig_interface_idw.i  swig_setup_idw.py
mathematics/: CMakeLists.txt  eigen_note.md  geometry.cpp  geometry.h  math_common.cpp  math_common.h  matrix_common.h  numerical_analysis.cpp  numerical_analysis.h
my_cpp/: .gitignore  my_cpp.sln
my_cpp/Debug/: my_cpp.ilk
my_cpp/my_cpp/: .gitignore  common.cpp  common.h  date_time.cpp  date_time.h  my_cpp.cpp  my_cpp.h  my_cpp.vcxproj  my_cpp.vcxproj.filters  my_main.cpp  python_api.cpp  search_algorithm.h  sort_algorithm.cpp  sort_algorithm.h  vector_note.cpp
my_cpp/my_cpp/Debug/: vc140.idb
my_cpp/my_cpp/Debug/my_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  my_cpp.lastbuildstate
my_date_time/: my_date_time.cpp  my_date_time.h
opencv_note/: main_cv.cpp  operations_with_images.cpp  operations_with_images.h
swig/: _array_cos.cp37-win_amd64.pyd  _my_cpp.cp37-win_amd64.pyd  array_cos.i  array_cos.py  array_cos_wrap.cxx  my_cpp.cpp  my_cpp.i  my_cpp.py  my_cpp_wrap.cxx  setup.py  setup_array_cos.py
